Removed some useless code

--- a/clustering/Clustering.ipynb
+++ b/clustering/Clustering.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d331c49b230bda9bf1f7a42b87d51c0f4229b6a591996d0949fe3127390e15b1"
+  "signature": "sha256:68fd12c642023a2a8f443fa99d17ff648726b2bc9b39946342e5f9c1f1233d8f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -24,7 +24,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 21
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -61,7 +61,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 49
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -76,15 +76,15 @@
       "    if len(fields) == 10:\n",
       "        documents.append(getDoc(fields))\n",
       "        doc_ids.append(getField(fields, 0))\n",
-      "\n",
-      "print \"# Documents: %i\" % len(documents)\n",
-      "\n",
       "tfidf_vectorizer = TfidfVectorizer(use_idf=True)\n",
       "tfidf_matrix = tfidf_vectorizer.fit_transform(documents)\n",
       "\n",
       "num_clusters = int(floor(sqrt(len(documents)/2)))\n",
       "terms = tfidf_vectorizer.get_feature_names()\n",
       "dist = 1 - cosine_similarity(tfidf_matrix)\n",
+      "\n",
+      "print \"# Documents: %i\" % len(documents)\n",
+      "print \"# Terms: %i\" % len(terms)\n",
       "\n",
       "km = KMeans(n_clusters=num_clusters)\n",
       "km.fit(tfidf_matrix)\n",
@@ -97,33 +97,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "# Documents: 8000\n"
+        "# Documents: 8000\n",
+        "# Terms: 9058\n"
        ]
       }
-     ],
-     "prompt_number": 5
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# Report num of terms\n",
-      "# Report num of documents\n",
-      "getRelatedDocs(334123)\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 50,
-       "text": [
-        "-1"
-       ]
-      }
-     ],
-     "prompt_number": 50
+     ]
     },
     {
      "cell_type": "code",
@@ -144,14 +122,6 @@
       "if __name__ == '__main__':\n",
       "    app.run(host='10.177.49.144')"
      ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
